@@ -1,0 +1,7 @@
+haldir = ${libexecdir}
+noinst_SCRIPTS = \
+        hal-synce-bluetooth
+
+EXTRA_DIST = synce-bt.peers \
+	synce-bt.ip-up \
+	synce-bt.ip-down
